--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -40,7 +40,7 @@
       </div>
       
       <h2>
-        Tell the world <br class="rwd-show">when you buy something great.
+        We find and buy great things. <br class="rwd-show">Help others discover them, too.
       </h2>
       
       <div style="text-align: center;">
