fixed class for wrapper.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
     <%=yield :top%>
   	
   	<!-- wrapper for sticky header -->
-  	<div class="wrapper">
+  	<div id="wrapper" class="wrapper">
     
 	    <div id="fb-root">
       </div> 
