iphone link on home and footer

--- a/app/views/footers/_default.html.erb
+++ b/app/views/footers/_default.html.erb
@@ -17,8 +17,10 @@
   		<li class="rwd-hide">
   			© <%=CONFIG[:name]%> 2012
   		</li>
-  		<li class="rwd-hide">
-  			Palo Alto, CA
+  		<li>
+  			<a href="itms://itunes.apple.com/us/app/mine./id567558757?mt=8">
+  				iPhone App
+  			</a>
   		</li>
   		<li>
   			<a href="<%=about_path(:src => "footer")%>">About</a>
