switching to http itunes links.

--- a/app/views/footers/_default.html.erb
+++ b/app/views/footers/_default.html.erb
@@ -18,7 +18,7 @@
   			© <%=CONFIG[:name]%> 2012
   		</li>
   		<li>
-  			<a href="itms://itunes.apple.com/us/app/mine./id567558757?mt=8">
+  			<a href="http://itunes.apple.com/us/app/mine./id567558757?mt=8">
   				iPhone App
   			</a>
   		</li>
