--- a/app/views/home/_story.html.erb
+++ b/app/views/home/_story.html.erb
@@ -8,7 +8,7 @@
           :class => "logo-home unselectable"%>	
       
       <%unless is_phone_device?%>  
-	      <a href="itms://itunes.apple.com/us/app/mine./id567558757?mt=8" class="app-store-badge absolute">
+	      <a href="http://itunes.apple.com/us/app/mine./id567558757?mt=8" class="app-store-badge absolute">
 	      	<%=image_tag "home/app-store-badge-2x.png",
 	          :class => ""%>
 	      </a>
