--- a/app/views/footers/_default.html.erb
+++ b/app/views/footers/_default.html.erb
@@ -6,7 +6,7 @@
 	  </div> <!-- /like-button-box -->
 	  
 	  <div class="twitter-button-box absolute border-box rwd-hide">
-	    <a href="https://twitter.com/getmine" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">
+	    <a href="https://twitter.com/getmine" class="twitter-follow-button" data-show-count="true" data-show-screen-name="false">
 	    </a>
 			<script>
 				!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
