email iphone app awesomeness

--- a/app/views/footers/_default.html.erb
+++ b/app/views/footers/_default.html.erb
@@ -15,7 +15,7 @@
   
   	<ul>
   		<li class="rwd-hide">
-  			© <%=CONFIG[:name]%> 2012
+  			© <%=CONFIG[:name]%>
   		</li>
   		<li>
   			<a href="http://itunes.apple.com/us/app/mine./id567558757?mt=8">
