new fields added to work with purchases extracted from email.
This commit ensures compatability with purchases created by the user
from a client.

--- a/app/views/purchases/show/_logged_in.html.erb
+++ b/app/views/purchases/show/_logged_in.html.erb
@@ -13,9 +13,9 @@
   
 
   <div class="item-row-box border-box rounded-8 shaded" style="margin-bottom: 18px;">
-    <%cache ["v5",@purchase.user,"purchases","preview"] do%>
-      <%@purchase.user.purchases.with_user.
-                  by_created_at.limit(8).each do |purchase|%>
+    <%cache ["v6",@purchase.user,"purchases","preview"] do%>
+      <%@purchase.user.purchases.approved.with_user.
+                  by_bought_at.limit(8).each do |purchase|%>
         <%cache ["v4",purchase,"teaser","purchase"] do%>
           <div id="purchase_thumb_<%=purchase.id%>" class="item">
             <%=link_to image_tag(purchase.square_url, :class => 'item-photo opacity-90-100'),
