admin users can become another user for a session.

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -12,6 +12,7 @@
     FB user id - <%=f.text_field :fb_user_id%> <br>
     TW user id - <%=f.text_field :tw_user_id%> <br>
     Is special? - <%=f.check_box :is_special%> <br>
+    Become? - <%=check_box_tag :become%> <br>
 
     <br>
     <%=submit_tag "Save", :name => nil%>
