more email picker jazz

--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -56,7 +56,7 @@
           :locals => {
             :f => f,
             :suggestion => nil,
-            :submit_text => "<i class='icon-ok icon-white'></i> Add to mine",
+            :submit_text => "<i class='icon-ok icon-white'></i> Add to Mine",
             :show_cancel_button => false,
             :show_delete_button => false,
             :show_extra_steps => false,
