--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -7,17 +7,20 @@
       	Finding your latest purchases...
       </span>
       
+<!--
   <a id="cancel_button" class="close opacity-60-80 absolute alias-smooth transition-opacity" href="javascript:void(0)">
 		×
 	</a>
-
-<!--
-	<a href="/"
-			class="btn btn-large border-box rounded-3 absolute shaded-strong"
-			style="width: 140px; top: 12px; right: 12px;">
-		Add to Mine
-	</a>
 -->
+
+	<a href="/"
+			class="btn btn-red btn-large border-box rounded-3 absolute shaded"
+			style="width: 160px; top: 12px; right: 12px;">
+		<span class="hide-when-loading">
+			<i class="icon-ok icon-white" style="padding-right: 4px;"></i> Add to Mine
+		</span>
+		<i class="icon-loading icon-white"></i>
+	</a>
 	
 </div>
 
