feed email unit styled

--- a/app/views/purchases/_chooser.html.erb
+++ b/app/views/purchases/_chooser.html.erb
@@ -34,11 +34,11 @@
 		              type="text" 
 		              value="">
 					<a id="purchase_repeat_search" 
-		              class="btn btn-large border-box rounded-3 go shaded" 
+		              class="btn btn-silver btn-large border-box rounded-3 go shaded" 
 		              title="Search"
 		              alt="Search">
 		      	<span class='hide-when-loading'>
-			      	<%=image_tag "icons/PNG-Icons/32px-white/Edition-25-white.png", 
+			      	<%=image_tag "icons/PNG-Icons/32px/Edition-25-shaded.png", 
 	                :style => "height: 14px; margin-top: 13px; vertical-align: top;"%>
 		      	</span>
 		      	<i class='icon-loading icon-white'></i>
