--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -72,6 +72,31 @@
 </div> <!-- /create-box -->
 
 
+<!-- email importer box -->
+
+<div class="well-box border-box rounded-8-bottom rwd-hide" style="padding-top: 2px; margin: -17px 0 12px; box-shadow: none;">
+	<div class="email-action-box relative">		
+		<span class="txt m top-line opacity-80">
+			Import purchases automagically via your inbox.
+		</span>
+		<br>
+		<a class="txt s bottom-line opacity-80-100 transition-opacity" href="/">
+			Learn more
+		</a>
+		<a class="btn btn-small btn-silver shaded rounded-3 absolute" href="" style="width: 15%; top: 12px; right: 16.61%;">
+			<%=image_tag "logos/email-google-logo-18.png",
+					:class => ""%>
+  	</a>
+  	<a class="btn btn-small btn-silver shaded rounded-3 absolute" href="" style="width: 15%; top: 12px; right: 0;">
+			<%=image_tag "logos/email-yahoo-logo-18.png",
+					:class => ""%>
+  	</a>
+	</div>
+</div>
+
+<!-- /email importer box -->
+
+
 <div class="box-title feed-title relative">
 	Your feed
 </div>
