--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -44,6 +44,8 @@
 
     new Denwen.Views.Purchases.Unapproved({
       source  : "<%=h @source%>",
-      mode : "<%=h params[:mode]%>"});
+      mode : "<%=h params[:mode]%>",
+      successURL: "<%=user_path(self.current_user.handle,:src =>'mined')%>"
+      });
   </script>
 <%end%>
