welcome intro leads to welcome connect.

--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -7,7 +7,7 @@
       	People share their best buys on Mine.
       </span>
 
-	<a href="<%=welcome_path(WelcomeFilter::Create)%>"
+	<a href="<%=welcome_path(WelcomeFilter::Connect)%>"
 			class="btn btn-large border-box rounded-3 absolute shaded-strong"
 			style="width: 140px; top: 12px; right: 12px;">
 		Start Yours
