--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -8,7 +8,7 @@
       </span>
 
 	<a href="<%=welcome_path(WelcomeFilter::Connect)%>"
-			class="btn btn-large border-box rounded-3 absolute shaded-strong"
+			class="btn btn-large btn-red border-box rounded-3 absolute shaded"
 			style="width: 140px; top: 12px; right: 12px;">
 		Start Yours
 	</a>
