--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -1,9 +1,9 @@
 <div class="well-box padded border-box rounded-8 relative">
 
-	<h2>Import your purchases, automagically</h2>
+	<h2>New! Import your purchases, automagically</h2>
 	
 	<p class="txt m border-box">
-		Connect you email and sit back while Mine revives your e-receipts.
+		Connect your email and sit back while Mine revives your e-receipts.
 	</p>
 	
 	<div style="padding: 12px 0 22px;">
