email importer top bar styled

--- a/app/views/purchases/_chooser.html.erb
+++ b/app/views/purchases/_chooser.html.erb
@@ -17,7 +17,7 @@
 			<%end%>
 
 		
-			<div class="search-container relative well-box border-box rounded-8" id="spinner_box" style="padding: 6px; background: #474747;">
+			<div class="inset-container relative well-box border-box rounded-8" id="spinner_box">
 				
 					<div class="rwd-hide prompt border-box rounded-5-left unselectable">	
 						<span class="default">
