disable learn more buttons, hook up skip button.

--- a/app/views/welcome/connect.html.erb
+++ b/app/views/welcome/connect.html.erb
@@ -27,11 +27,12 @@
 
 
 	<span class="txt s">
-		<a class="opacity-80-100 transition-opacity" href="/">
+		<a class="opacity-80-100 transition-opacity" href="javascript:void(0)">
 			Learn more
 		</a>
 		&nbsp;&nbsp;|&nbsp;&nbsp;
-		<a class="opacity-80-100 transition-opacity" href="/" >
+		<a class="opacity-80-100 transition-opacity" 
+        href="<%=root_path(:src => 'skip')%>">
 			Skip
 		</a>
 	</span>
