--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -81,7 +81,7 @@
         Import purchases automagically via your inbox.
       </span>
       <br>
-      <a class="txt s bottom-line opacity-80-100 transition-opacity" href="/">
+      <a class="txt s bottom-line opacity-80-100 transition-opacity" href="javascript:void(0)">
         Learn more
       </a>
       <a id="google_connect_button"
