--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -7,7 +7,7 @@
       
 	<div class="inset-container relative well-box border-box rounded-8">
 				
-		<div id="" class="inset-message inline-block working">
+		<div id="progress_message" class="inset-message inline-block working">
 			<span class="message-working">
     	<%=image_tag "loading/loading-sync-FFF-474747.gif",
      			:class => "sync"%>
@@ -37,7 +37,8 @@
 	
   </div>
       
-  <a id="cancel_button" class="close opacity-60-80 absolute alias-smooth transition-opacity" href="javascript:void(0)">
+  <a class="close opacity-60-80 absolute alias-smooth transition-opacity" 
+    href="<%=is_onboarding? ? welcome_path(WelcomeFilter::Connect) : root_path%>">
 		×
 	</a>
 	
