--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1401,9 +1401,15 @@ a.feed-intro .highlight { font-weight: bold; }
 .inset-message span img { padding: 0 8px 0 14px; margin-top: -2px; }
 .inset-message span .icon-white { margin: 6px 9px 0 15px; }
 
-.inset-message.working  .message-working,
-.inset-message.complete .message-complete,
-.inset-message.update   .message-update   { display: block; }
+.inset-message.working  .message-working  {display: block;}
+.inset-message.working  .message-complete {display: none;}
+.inset-message.working  .message-update   {display: none;}
+.inset-message.complete .message-working  {display: none;}
+.inset-message.complete .message-complete {display: block;}
+.inset-message.complete .message-update   {display: none;}
+.inset-message.update  .message-working  {display: none;}
+.inset-message.update  .message-complete {display: none;}
+.inset-message.update  .message-update   {display: block;}
 	
 	
 /* Settings
