--- a/app/views/feed/show.html.erb
+++ b/app/views/feed/show.html.erb
@@ -89,14 +89,16 @@
           href="javascript:void(0)" 
           style="width: 15%; top: 12px; right: 16.61%;">
         <%=image_tag "logos/email-google-logo-18.png",
-            :class => ""%>
+            :class => "hide-when-loading"%>
+        <i class="icon-loading icon-white"></i>
       </a>
       <a id="yahoo_connect_button"
           class="btn btn-small btn-silver shaded rounded-3 absolute" 
           href="javascript:void(0)" 
           style="width: 15%; top: 12px; right: 0;">
         <%=image_tag "logos/email-yahoo-logo-18.png",
-            :class => ""%>
+            :class => "hide-when-loading"%>
+        <i class="icon-loading icon-white"></i>
       </a>
     </div>
   </div>
